--- a/animals.html
+++ b/animals.html
@@ -68,7 +68,7 @@
         <h1>My Animal Repository</h1>
         <ul class="cards">
             <li class="cards__item">
-<div class="card__title">American Foxhound</div>
+<div class="card__title">Cactus Mouse</div>
 <div class="card__text">
 <ul>
 <li>
@@ -76,125 +76,6 @@
 </li>
 <li>
 <strong>Location:</strong> North-America
-</li>
-<li>
-<strong>Type:</strong> Hound
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Arctic Fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Carnivore
-</li>
-<li>
-<strong>Location:</strong> Eurasia
-</li>
-<li>
-<strong>Type:</strong> Mammal
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Cross Fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Carnivore
-</li>
-<li>
-<strong>Location:</strong> North-America
-</li>
-<li>
-<strong>Type:</strong> mammal
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Darwin’s fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> South-America
-</li>
-<li>
-<strong>Type:</strong> Mammal
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">English Foxhound</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> Europe
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Fennec Fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> Africa
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Carnivore
-</li>
-<li>
-<strong>Location:</strong> Africa
-</li>
-<li>
-<strong>Type:</strong> Mammal
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Fox Snakes</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Carnivore
-</li>
-<li>
-<strong>Location:</strong> North-America
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Fox Squirrel</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> Central-America
 </li>
 <li>
 <strong>Type:</strong> rodent
@@ -203,81 +84,7 @@
 </div>
 </li>
 <li class="cards__item">
-<div class="card__title">Fox Terrier</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> Europe
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Golden-Crowned Flying Fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Herbivore
-</li>
-<li>
-<strong>Location:</strong> Asia
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Gray Fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> Central-America
-</li>
-<li>
-<strong>Type:</strong> Mammal
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Kit Fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> Central-America
-</li>
-<li>
-<strong>Type:</strong> mammal
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Marble Fox</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> North-America
-</li>
-<li>
-<strong>Type:</strong> Mammal
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Red Fox</div>
+<div class="card__title">Dormouse</div>
 <div class="card__text">
 <ul>
 <li>
@@ -286,31 +93,37 @@
 <li>
 <strong>Location:</strong> Africa
 </li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Smooth Fox Terrier</div>
-<div class="card__text">
-<ul>
 <li>
-<strong>Diet:</strong> Omnivore
-</li>
-<li>
-<strong>Location:</strong> Europe
+<strong>Type:</strong> Mammal
 </li>
 </ul>
 </div>
 </li>
 <li class="cards__item">
-<div class="card__title">Tibetan Fox</div>
+<div class="card__title">Grasshopper Mouse</div>
 <div class="card__text">
 <ul>
 <li>
 <strong>Diet:</strong> Carnivore
 </li>
 <li>
-<strong>Location:</strong> Asia
+<strong>Location:</strong> Central-America
+</li>
+<li>
+<strong>Type:</strong> Rodent
+</li>
+</ul>
+</div>
+</li>
+<li class="cards__item">
+<div class="card__title">Grey Mouse Lemur</div>
+<div class="card__text">
+<ul>
+<li>
+<strong>Diet:</strong> Omnivore
+</li>
+<li>
+<strong>Location:</strong> Africa
 </li>
 <li>
 <strong>Type:</strong> Mammal
@@ -319,27 +132,17 @@
 </div>
 </li>
 <li class="cards__item">
-<div class="card__title">Toy Fox Terrier</div>
+<div class="card__title">Mouse</div>
 <div class="card__text">
 <ul>
 <li>
-<strong>Diet:</strong> Omnivore
+<strong>Diet:</strong> Herbivore
 </li>
 <li>
-<strong>Location:</strong> North-America
-</li>
-</ul>
-</div>
-</li>
-<li class="cards__item">
-<div class="card__title">Wire Fox Terrier</div>
-<div class="card__text">
-<ul>
-<li>
-<strong>Diet:</strong> Omnivore
+<strong>Location:</strong> Africa
 </li>
 <li>
-<strong>Location:</strong> Europe
+<strong>Type:</strong> Mammal
 </li>
 </ul>
 </div>
