--- a/animals_template.html
+++ b/animals_template.html
@@ -19,6 +19,12 @@
             font-weight: normal;
         }
 
+        h2 {
+            text-align: center;
+            font-size: 30pt;
+            font-weight: normal;
+        }
+
         body {
           font-family: 'Roboto','Helvetica Neue', Helvetica, Arial, sans-serif;
           font-style: normal;
